@@ -1,5 +1,10 @@
 Changes with Apache 1.3a2
 
+  *) The request to a remote proxy was mangled if it was generated as the
+     result of a ProxyPass directive. URL schemes other than http:// were not
+     supported when ProxyRemote was used. PR#260, PR#656, PR#699, PR#713,
+     PR#812 [Lars Eilebrecht]
+
   *) PORT: Apache has need for mutexes to serialize its children around
      accept.  In prior versions either fcntl file locking or flock file
      locking were used.  The method is chosen by the definition of
